# Twitch-Viewer-bot

./: README.md  pyproject.toml
install/: install_requirement.bat
src/twitchbot/: install_dependance.bat  install_requirement.py  main_record.py  requirements.txt
