[tool.poetry]
name = "TwitchViewerBOT"
version = "1.2"
description = "Twitch Bot for making fake viewers on your live"
authors = ["Votre Nom <votre.email@example.com>"] # Ajoutez votre nom et votre email ici
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.9"
requests = "2.31.0"
streamlink = "5.5.1"
fake_useragent = "1.1.3"
customtkinter = "5.1.3"
pycryptodome = "3.19.1"
cffi = "1.15.1"
rich = "13.7"

[tool.poetry.dev-dependencies]
pytest = "7.3.1"
